add put method for reorser statuses
